2009-01-17  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c: More robust fits parsing.

2009-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated news.

2009-01-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/colorspace.c (XYZTransformPackets): Fix arithmetic
	overflow problem noticed for Q32 build when using GCC on
	big-endian systems.

	* magick/constitute.c: Update Richard Nolde's float 16 and 24
	functions.

	* magick/command.c (VersionCommand): Print some build information
	for MSVC builds.

2009-01-10  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c: Ability to skip unsupported multidimensional object.

2009-01-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (GetBlobSize): It seems that under Windows, the
	zip stream is not usable as a file handle.  Switch back to using
	stat instead, but use _stati64 if available.

2009-01-04  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c: Fixed bug in scene count in extension block.
	* coders/fits.c: Supported logging.

2009-01-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Produce sprintf scaling strings for
	platform-specific types.

	* magick/magick_types.h.in: Include sprintf scaling strings for
	platform-specific types.

	* magick/constitute.c (WriteImage): If output stream is not
	seekable and coder needs to use seek, then divert output to
	temporary file, and then send file to stream.

	* magick/blob.c (GetBlobSize): Simplify implementation.
	(OpenBlob): Don't attempt to test header magic on file we are
	writing.  Silly benign bug in obtuse code.

	* coders/tiff.c (ReadTIFFImage,WriteTIFFImage): Strip out use of
	temporary file.  Use TIFFClientOpen() for writing.

2008-12-28  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/fits.c: Ability to read extension blocks.
	* coders/fits.c: Fixed MaxTextExtent limitation of blocks.

2008-12-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
