@@ -101,7 +101,7 @@ Requires: %{name}-devel = %{version}, bzip2-devel, freetype-devel
 Requires: libjpeg-devel, libpng-devel, libtiff-devel, zlib-devel, libxml2-devel
 
 %description c++-devel
-GraphicsMagick-devel contains the static libraries and header files you'll
+raphicsMagick-devel contains the static libraries and header files you'll
 need to develop GraphicsMagick applications using the Magick++ C++ bindings.
 GraphicsMagick is an image manipulation program.
 
@@ -135,8 +135,7 @@ rm -f PerlMagick/Makefile.PL
 
 %configure --enable-libtool-verbose --with-included-ltdl \
         --enable-shared --disable-static \
-	--with-modules --enable-lzw \
-	--with-frozenpaths \
+	--with-modules --with-frozenpaths \
 %if %{perlm}
 	--with-perl \
 	--with-perl-options="$PERLOPTS" \
@@ -235,6 +234,9 @@ rm -rf $RPM_BUILD_ROOT
 %endif
 
 %changelog
+* Wed Jan 21 2008 Bob Friesenhahn <bfriesen@graphicsmagick.org> 1.3
+-  --enable-lzw option is not longer needed
+
 * Tue Nov 11 2008 Giacomo Tenaglia 1.3 <gtenagli at sf . net>.
 - The *-config scripts were listed twice.
 - Add definition for %{_datadir}/doc directory
