@@ -21,6 +21,13 @@
 </tr>
 </table>
 <p>
+2009-01-17  Fojtik Jaroslav  &lt;JaFojtik@seznam.cz&gt;
+
+<UL>
+  <LI> coders/fits.c: More robust fits parsing.
+
+</UL>
+<p>
 2009-01-13  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
@@ -40,6 +47,13 @@
 
   <LI> magick/command.c (VersionCommand): Print some build information
         for MSVC builds.
+
+</UL>
+<p>
+2009-01-10  Fojtik Jaroslav  &lt;JaFojtik@seznam.cz&gt;
+
+<UL>
+  <LI> coders/fits.c: Ability to skip unsupported multidimensional object.
 
 </UL>
 <p>
