@@ -173,17 +173,20 @@ a utility to read and manipulate raw images from digital cameras.</p>
 an open source ICC profiler with graphical user interface.</p>
 <p><a class="reference" href="http://gallery.menalto.com/">Gallery</a>,
 a facinating web-based photo album organizer.  Works with GraphicsMagick!.</p>
+<p><a class="reference" href="http://djv.sourceforge.net/">DJV Imaging</a>, professional movie
+playback and image processing software for the film and computer
+animation industries.</p>
 </div>
 <div class="section">
 <h1><a id="stock-photos" name="stock-photos">Stock Photos</a></h1>
 <p><a class="reference" href="http://www.morguefile.com/">MorgueFile</a>, Free high-resolution stock photo images.</p>
 <hr class="docutils" />
-<p><a class="reference" href="Copyright.html">Copyright</a> © GraphicsMagick Group 2002 - 2008</p>
+<p><a class="reference" href="Copyright.html">Copyright</a> © GraphicsMagick Group 2002 - 2009</p>
 </div>
 </div>
 <div class="footer">
 <hr class="footer" />
-Generated on: 2008-12-30 21:47 UTC.
+Generated on: 2009-01-18 22:06 UTC.
 
 </div>
 </body>
