@@ -1,3 +1,10 @@
+2009-01-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* Makefile.am: Don't install Magick++ headers if Magick++ is
+	disabled.
+
+	* GraphicsMagick.spec.in: --enable-lzw option is no longer used.
+
 2009-01-17  Fojtik Jaroslav  <JaFojtik@seznam.cz>
 
 	* coders/fits.c: More robust fits parsing.
